--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         </ul>
       </navigation>
    </header>
-
    <main class="main">
-
       <section class="about">
         <div class="about__text-skill">
           <h1 class="about__header">Hello World!</h1>
@@ -42,7 +40,7 @@
             и компонентов в приложениях и сайтах.
            Люблю принимать участие в проектах которые делают повседневную жизнь лучше!
            Буду рад сотрудничеству!</p>
-          <p class="about__description">Навыки: JavaScript, ES6, React, SCSS, HTML, Linux Ubuntu, CSS, Gulp, Twig, Adobe Photoshop, Git, Bootstrap, Figma, методология БЭМ, jQuery, PixelPerfect, Кроссбраузерная и адаптивная вёртска, UX/UI HTML5
+          <p class="about__description">Навыки: JavaScript, ES6, React, SCSS, Linux Ubuntu, CSS, Gulp, Twig, Adobe Photoshop, Git, Bootstrap, Figma, jQuery, Кроссбраузерная и адаптивная вёртска, UX/UI, HTML5
           </p>
           <ul class="about__list">
             <li class="about__item">
@@ -80,16 +78,14 @@
             </li>
           </ul>
         </div>
-        <img class="about__img" src="./img/me.jpg" alt="">
+        <img class="about__img" src="./img/1.jpg" alt="">
       </section>
-
-      <section id="myworks" class="works ">
+      <section id="myworks" class="works">
         <div class="container">
           <h2 class="works__header work">React <span class="yellow">Js</span></h2>
-          
           <ul class="works__list">
             <li class="works__item">
-                <a href="https://lisofsky023.github.io/react-quiz/" class="works__link">
+                <a href="https://quiz-3ap0cudtw-lisofsky023.vercel.app/" class="works__link">
                   <img class="works__img" src="./img/quiz.png" alt="">
                   <h3 class="works__subtitle">Quiz on React</h3>
                   <ul>
@@ -100,33 +96,30 @@
               </a>
             </li>
             <li class="works__item">
-              <a href="#" class="works__link">
-                <img class="works__img" src="./img/todo.png" alt="">
-                <h3 class="works__subtitle">Todo list</h3>
-                <p class="works__desc">Lorem ipsum dolor sit amet,      consectetur adipisicing elit. Ad beatae consequatur com-modi voluptas exercitatio-nem vero cumque. Rerum cumque natus rem culpa voluptates, beatae quidem ut blanditiis repellat numquam velit amet? Rerum cumque natus rem culpa voluptates, beatae quidem ut blanditiis repellat numquam velit amet</p>
+              <a href="https://api-weather-one.vercel.app/" class="works__link">
+                <img class="works__img" src="./img/api.png" alt="">
+                <h3 class="works__subtitle">Weather Api</h3>
+                <ul>
+                  <li class="works__desc-adaptive">React Js</li>
+                  <li class="works__desc-adaptive">CSS</li>
+                  <li class="works__desc-adaptive">API</li>
+                </ul>
               </a>
             </a>
             </li>
             <li class="works__item">
-              <a href="#" class="works__link">
+              <a href="https://todo-zeta-one.vercel.app/" class="works__link">
                 <img class="works__img" src="./img/todo.png" alt="">
-                <h3 class="works__subtitle">Todo list</h3>
-                <p class="works__desc">Lorem ipsum dolor sit amet,      consectetur adipisicing elit. Ad beatae consequatur com-modi voluptas exercitatio-nem vero cumque. Rerum cumque natus rem culpa voluptates, beatae quidem ut blanditiis repellat numquam velit amet? Rerum cumque natus rem culpa voluptates, beatae quidem ut blanditiis repellat numquam velit amet</p>
+                <h3 class="works__subtitle">Todo list with saving on LocalStorage</h3>
+                <ul>
+                  <li class="works__desc-adaptive">React Js</li>
+                </ul>
               </a>
-            </a>
-          </li>
-          <li class="works__item">
-            <a href="#" class="works__link">
-              <img class="works__img" src="./img/todo.png" alt="">
-              <h3 class="works__subtitle">Todo list</h3>
-              <p class="works__desc">Lorem ipsum dolor sit amet,      consectetur adipisicing elit. Ad beatae consequatur com-modi voluptas exercitatio-nem vero cumque. Rerum cumque natus rem culpa voluptates, beatae quidem ut blanditiis repellat numquam velit amet? Rerum cumque natus rem culpa voluptates, beatae quidem ut blanditiis repellat numquam velit amet</p>
-            </a>
             </a>
           </li>
         </ul>
        </div>
       </section>
-
       <section class="works">
         <div class="container">
           <h2 class="works__header adaptive">Adaptive <span class="layout">layout</span></h2>
@@ -137,8 +130,6 @@
                   <img class="works__img" src="./img/tiny.png" alt="">
                   <h3 class="works__subtitle tiny-header">Landing page on bootstrap</h3>
                   <ul>
-                    <li class="works__desc-adaptive">HTML</li>
-                    <li class="works__desc-adaptive">CSS</li>
                     <li class="works__desc-adaptive">BOOTSTRAP</li>
                   </ul>
                   <!-- <p class="works__desc-adaptive">HTML CSS BOOTSTRAP</p> -->
@@ -153,7 +144,6 @@
                   <li class="works__desc-adaptive">CSS</li>
                   <li class="works__desc-adaptive">JS</li>
                 </ul>
-                <!-- <p class="works__desc-adaptive">HTML CSS JS</p> -->
               </a>            
             </li>
             <li class="works__item">
@@ -165,7 +155,6 @@
                   <li class="works__desc-adaptive">CSS</li>
                   <li class="works__desc-adaptive">JS</li>
                 </ul>
-                <!-- <p class="works__desc"></p> -->
               </a>            
           </li>
           <li class="works__item">
@@ -173,21 +162,43 @@
                 <img class="works__img" src="./img/tasty.png" alt="">
                 <h3 class="works__subtitle tiny-header">Adaptive Landing Page  with slider for Tasty Cookery</h3>
                 <ul>
-                  <li class="works__desc-adaptive">HTML</li>
-                  <li class="works__desc-adaptive">CSS</li>
                   <li class="works__desc-adaptive">JS</li>
                   <li class="works__desc-adaptive">JQUERY, SLIDER SLICK</li>
                 </ul>
-              <!-- <p class="works__desc"></p> -->
               </a>
           </li>
-
         </ul>
        </div>
       </section>
    </main>
-   <footer class="footer">
-
+   <section class="about-me" id="about">
+     <h2 class="header-about">About <span class="header-about__color">Me</span></h2>
+     <a class="link-resume" download="" href="./Лисовский Алексей Олегович.doc">Cкачать резюме</a>
+      <p class="about-text">Разрабатываю современные интерфейсы и компоненты в приложениях
+         и сайтах. Хотел бы принять участие в проектах которые делают повседневную жизнь лучше. 
+         В работе с макетом использую Photoshop, Figma,
+        в верстке HTML5, SCSS, CSS применяю знания DOM,BOM при работе с JavaScript,
+         изучаю и пишу простые компоненты на React.js . Занимаюсь самообразованием,
+          прохожу курсы по JS и его фреймворкам. Буду рад сотрудничеству!
+        </p>
+        <br>
+        <p class="about-text">I want to work with the projects, which make our life better (educational, scientific, in the field of trade and finance).
+          I can develop modern interfaces and components in apps and sites.
+          I would like to take part in some projects which make everyday life better.
+          When working with the layout I use Photoshop, Figma,
+          in HTML5, SCSS, FlexBox, Bootstrap, and apply knowledge of DOM, BOM when working with JavaScript.
+          I'm learning and developing simple components in Vue.js, learning React.js.
+          I am engaged in self-education and take courses on JS and the frameworks.          
+          Will be glad to cooperate!
+         </p>
+         <div>
+      </div>
+   </section>
+   <footer class="contacts" id="contacts">
+    <a class="contacts-link tel" href="tel:+79111198789">+79111198789</a>
+    <a class="contacts-link tg" href="https://t.me/lisofsky23"></a>
+    <a class="contacts-link gm" href="mailto:lisofsky.90@gmail.com"></a>
+    <a class="contacts-link" href="https://career.habr.com/lisofsky023"></a>
    </footer>
    <script src="script.js"></script>
 </body>
