--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <h2 class="works__header work">React <span class="yellow">Js</span></h2>
           <ul class="works__list">
             <li class="works__item">
-                <a href="https://quiz-3ap0cudtw-lisofsky023.vercel.app/" class="works__link">
+                <a href="https://quiz-lisofsky023.vercel.app/" class="works__link">
                   <img class="works__img" src="./img/quiz.png" alt="">
                   <h3 class="works__subtitle">Quiz on React</h3>
                   <ul>
@@ -132,7 +132,6 @@
                   <ul>
                     <li class="works__desc-adaptive">BOOTSTRAP</li>
                   </ul>
-                  <!-- <p class="works__desc-adaptive">HTML CSS BOOTSTRAP</p> -->
                 </a>
             </li>
             <li class="works__item">
@@ -173,7 +172,7 @@
    </main>
    <section class="about-me" id="about">
      <h2 class="header-about">About <span class="header-about__color">Me</span></h2>
-     <a class="link-resume" download="" href="./Лисовский Алексей Олегович.doc">Cкачать резюме</a>
+     <a class="link-resume" download="" href="./Лисовский Алексей Олегович.pdf">Cкачать резюме</a>
       <p class="about-text">Разрабатываю современные интерфейсы и компоненты в приложениях
          и сайтах. Хотел бы принять участие в проектах которые делают повседневную жизнь лучше. 
          В работе с макетом использую Photoshop, Figma,
