--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="dark-theme">
    <header class="header">
-      <a class="header__logo" href="">
+      <a class="header__logo" href="https://www.thevenusproject.com/">
         <img class="header__logo-img" src="./img/logo.png" alt="lis">
       </a>
       <navigation class="nav">
